expose availability within one month
Changelog: feat
